--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ lmer_model &lt;- lmer(diameter_mm
 <pre><code>## Warning in checkConv(attr(opt, &quot;derivs&quot;), opt$par, ctrl = control$checkConv, :
 ## Model failed to converge: degenerate Hessian with 1 negative eigenvalues</code></pre>
 </div>
-<div id="note-the-convergence-errors-and-singular-fit-warnings-observed.-in-this-case-the-random-intercept-is-unidentifiable-and-our-model-is-not-fit-for-purpose.-we-can-also-tell-thisfrom-the-anova-tablw-which-does-not-highlight-the-first-row-as-significant-where-correct-models-would." class="section level4">
+<div id="note-the-convergence-errors-and-singular-fit-warnings-observed.-in-this-case-the-random-intercept-is-unidentifiable-and-our-model-is-not-fit-for-purpose." class="section level4">
 <h4>Note the convergence errors and singular fit warnings observed. In
 this case, the random intercept is unidentifiable, and our model is not
 fit for purpose. We can also tell thisfrom the anova tablw which does
