--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2025-11-06" />
 
-<title>Cadaveric Study of the branches of the External Carotid Artery (ECA)</title>
+<title>A cadaveric study of the external carotid artery and its anterior branches’ variant morphological nature</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
